# Wetter

./: .env.example  .gitignore  README.md  WMO_weather_code.py  austra-choropleth.py  austria_top100_towns_2025.csv  austria_towns.csv  austria_towns_current_weather.csv  austrian-map.py  austrian_towns.py  create_all_towns_table.py  create_openmeteo_db.py  create_verbose_weather_records_view.py  create_wmo_weather_codes_table.py  delete_openmeteo_table.py  delete_weather_table.py  fetch_weather.py  generate_german_towns.py  generate_swiss_towns.py  generate_towns.py  generate_weather_webpage.py  german_towns.csv  import_german_towns_to_db.py  import_swiss_towns_to_db.py  import_towns_to_db.py  index.html  main.py  pyproject.toml  save_weather_to_db.py  store_weather_timeseries.py  swiss_towns.csv  visualize_weather.py  weather_dashboard.html  wetter_dashboard_plotly.py
